Change the title

--- a/Project1.ipynb
+++ b/Project1.ipynb
@@ -24,7 +24,7 @@
    "id": "5ac2835d",
    "metadata": {},
    "source": [
-    "## Relationship with  1 - Anshen Huang\n",
+    "## Relationship of start up fund and company type - Anshen Huang\n",
     "\n"
    ]
   },
